Cookies thay cho token dán vào thủ công